Apply suggestions from code review
Co-authored-by: Cristián Maureira-Fredes <cmaureir@users.noreply.github.com>

--- a/reference/toplevel_components.po
+++ b/reference/toplevel_components.po
@@ -89,8 +89,8 @@ msgid ""
 "is a tty device, the interpreter enters interactive mode; otherwise, it "
 "executes the file as a complete program."
 msgstr ""
-"Se puede pasar un programa completo al intérprete en tres formas: con la: "
-"opción: `-c` *string* opción de línea de comando, como un archivo pasado "
+"Se puede pasar un programa completo al intérprete en tres formas: con la opción :"
+"option:`-c` *string* de línea de comando, como un archivo pasado "
 "como primer argumento de línea de comando o como entrada estándar. Si el "
 "archivo o la entrada estándar es un dispositivo tty, el intérprete ingresa "
 "al modo interactivo; de lo contrario, ejecuta el archivo como un programa "
