--- a/reference/toplevel_components.po
+++ b/reference/toplevel_components.po
@@ -9,7 +9,7 @@ msgstr ""
 "Project-Id-Version: Python 3.8\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2019-05-06 11:59-0400\n"
-"PO-Revision-Date: 2020-10-18 15:35-0500\n"
+"PO-Revision-Date: 2020-10-18 16:24-0500\n"
 "Language-Team: python-doc-es\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -90,7 +90,7 @@ msgid ""
 "executes the file as a complete program."
 msgstr ""
 "Se puede pasar un programa completo al intérprete en tres formas: con la "
-"opción :opción: `-c` *string* de línea de comando, como un archivo pasado "
+"opción :option:`-c` *string* de línea de comando, como un archivo pasado "
 "como primer argumento de línea de comando o como entrada estándar. Si el "
 "archivo o la entrada estándar es un dispositivo tty, el intérprete ingresa "
 "al modo interactivo; de lo contrario, ejecuta el archivo como un programa "
