Apply suggestions from code review
Co-authored-by: Claudia Millán <clmilneb@gmail.com>

--- a/howto/logging-cookbook.po
+++ b/howto/logging-cookbook.po
@@ -427,7 +427,6 @@ msgstr "Uso de LoggerAdapters para impartir información contextual"
 
 # "signatures" por "características"?
 #: ../Doc/howto/logging-cookbook.rst:566
-#, fuzzy
 msgid ""
 "An easy way in which you can pass contextual information to be output along "
 "with logging event information is to use the :class:`LoggerAdapter` class. "
@@ -477,8 +476,8 @@ msgid ""
 "be silently overwritten."
 msgstr ""
 "El método :meth:`~LoggerAdapter.process` de :class:`LoggerAdapter` es donde "
-"la información contextual se agrega a la salida del registro. Se pasa el "
-"mensaje y los argumentos de palabra clave de la llamada logging, y devuelve "
+"la información contextual se agrega a la salida del logging. Se pasa el "
+"mensaje y los argumentos de palabra clave de la llamada logging, y retorna "
 "versiones (potencialmente) modificadas de estos para usar en la llamada al "
 "logging subyacente. La implementación predeterminada de este método deja el "
 "mensaje solo, pero inserta una clave 'extra' en el argumento de palabra "
@@ -548,7 +547,7 @@ msgid ""
 "can then be output using a suitable format string, or if needed a custom :"
 "class:`Formatter`."
 msgstr ""
-"También puedes agregar información contextual a la salida del registro "
+"También puedes agregar información contextual a la salida del log "
 "utilizando un :class:`Filter` definido por el usuario. Las instancias de "
 "``Filter`` pueden modificar los ``LogRecords`` que se les pasan, incluido el "
 "agregado de atributos adicionales que luego se pueden generar utilizando "
@@ -601,8 +600,8 @@ msgid ""
 "includes a working socket receiver which can be used as a starting point for "
 "you to adapt in your own applications."
 msgstr ""
-"Aunque logging es seguro para subprocesos, y logging a un solo archivo desde "
-"múltiples subprocesos en un solo proceso *es* compatible, el registro en un "
+"Aunque logging es seguro para hilos, y el logging a un solo archivo desde "
+"múltiples hilos en un solo proceso *es* compatible, el logging en un "
 "solo archivo desde *múltiples procesos* *no* es compatible, porque no existe "
 "una forma estándar de serializar el acceso a un solo archivo en múltiples "
 "procesos en Python. Si necesita hacer esto último, una forma de abordarlo es "
