Traducido archivo distutils/commandref

--- a/distutils/commandref.po
+++ b/distutils/commandref.po
@@ -175,8 +175,8 @@ msgid ""
 msgstr ""
 "Los patrones aquí son patrones \"glob\" de estilo Unix: ``*`` coincide con "
 "cualquier secuencia de caracteres de nombre de archivo habitual, ``?`` "
-"coincide con cualquier caracter de nombre de archivo habitual, y ``[rango]`` "
-"coincide con cualquiera de los caracteres en *rango* (p. ej., ``a-z``, ``a-"
+"coincide con cualquier caracter de nombre de archivo habitual, y ``[range]`` "
+"coincide con cualquiera de los caracteres en *range* (p. ej., ``a-z``, ``a-"
 "zA-Z``, ``a-f0-9_.``). La definición de \"caracter de nombre de archivo "
 "habitual\" es específica de la plataforma: en Unix es cualquier cosa excepto "
 "barra; en Windows cualquier cosa excepto barra invertida o dos puntos."
