cambiando algunas palabras

--- a/howto/regex.po
+++ b/howto/regex.po
@@ -357,7 +357,7 @@ msgid ""
 "``[^a-zA-Z0-9_]``."
 msgstr ""
 "Coincide con cualquier carácter no alfanumérico; esto es equivalente a la "
-"clase``[^a-zA-Z0-9_]``."
+"clase ``[^a-zA-Z0-9_]``."
 
 #: ../Doc/howto/regex.rst:152
 msgid ""
@@ -689,7 +689,7 @@ msgstr ""
 "expresarlas. (Hay aplicaciones que no necesitan RE en absoluto, por lo que "
 "no hay necesidad de aumentar la especificación del lenguaje incluyéndolas). "
 "En cambio, el módulo :mod:`re` es simplemente un módulo de extensión C "
-"incluido en Python, al igual que los módulos :mod:`socket` o :mod:zlib`."
+"incluido en Python, al igual que los módulos :mod:`socket` o :mod:`zlib`."
 
 #: ../Doc/howto/regex.rst:289
 msgid ""
@@ -1490,9 +1490,9 @@ msgid ""
 "the string."
 msgstr ""
 "Coincide con el comienzo de las líneas. A menos que se haya establecido la "
-"flag :const:`MULTILINE`, esto solo coincidirá al principio de la cadena de "
-"caracteres. En modo :const:`MULTILINE`, esto también coincide inmediatamente "
-"después de cada nueva línea dentro de la cadena."
+"flag :const:`MULTILINE` , esto solo coincidirá al principio de la cadena de "
+"caracteres. En modo :const:`MULTILINE` , esto también coincide "
+"inmediatamente después de cada nueva línea dentro de la cadena."
 
 #: ../Doc/howto/regex.rst:710
 msgid ""
@@ -1539,7 +1539,7 @@ msgid ""
 "newline character."
 msgstr ""
 "Coincide solo al comienzo de la cadena de caracteres. Cuando no está en el "
-"modo :const:`MULTILINE`,``\\A`` y ``^``son efectivamente lo mismo. En el "
+"modo :const:`MULTILINE`,``\\A`` y ``^`` son efectivamente lo mismo. En el "
 "modo :const:`MULTILINE`, son diferentes: ``\\ A`` todavía coincide solo al "
 "principio de la cadena, pero``^``puede coincidir en cualquier ubicación "
 "dentro de la cadena de caracteres que sigue a un carácter de nueva línea."
