--- a/whatsnew/3.1.po
+++ b/whatsnew/3.1.po
@@ -49,7 +49,7 @@ msgid ""
 "the experiences from those implementations, a new :class:`collections."
 "OrderedDict` class has been introduced."
 msgstr ""
-"Los diccionarios de Python normales iteran sobre clave/valores pares en "
+"Los diccionarios de Python normales iteran sobre los pares clave/valor en "
 "orden arbitrario. A través de los años, varios autores han escrito "
 "implementaciones alternativas que recuerdan el orden en el que se insertaron "
 "originalmente las claves. Basado en las experiencias de esas "
