--- a/whatsnew/3.1.po
+++ b/whatsnew/3.1.po
@@ -87,7 +87,7 @@ msgstr ""
 "varios módulos. El módulo :mod:`configparser` los usa por defecto. Esto "
 "permite que los archivos de configuración se lean, modifiquen y luego "
 "vuelvan a escribir en su orden original. El método *_asdict()* para :func:"
-"`collections.namedtuple` ahora devuelve un diccionario ordenado con los "
+"`collections.namedtuple` ahora retorna un diccionario ordenado con los "
 "valores que aparecen en el mismo orden que los índices de tupla subyacentes. "
 "El módulo :mod:`json` se está construyendo con un *object_pairs_hook* para "
 "permitir que el decodificador construya OrderedDicts. También se agregó "
