--- a/whatsnew/3.1.po
+++ b/whatsnew/3.1.po
@@ -324,7 +324,7 @@ msgid ""
 "representation."
 msgstr ""
 "El nuevo algoritmo para ``repr(1.1)`` es más inteligente y "
-"devuelve``'1.1'``. Efectivamente, busca todas las representaciones de "
+"retorna ``'1.1'``. Efectivamente, busca todas las representaciones de "
 "cadenas equivalentes (las que se almacenan con el mismo valor flotante "
 "subyacente) y devuelve la representación más corta."
 
