--- a/whatsnew/3.1.po
+++ b/whatsnew/3.1.po
@@ -326,7 +326,7 @@ msgstr ""
 "El nuevo algoritmo para ``repr(1.1)`` es más inteligente y "
 "retorna ``'1.1'``. Efectivamente, busca todas las representaciones de "
 "cadenas equivalentes (las que se almacenan con el mismo valor flotante "
-"subyacente) y devuelve la representación más corta."
+"subyacente) y retorna la representación más corta."
 
 #: ../Doc/whatsnew/3.1.rst:212
 msgid ""
