--- a/whatsnew/3.1.po
+++ b/whatsnew/3.1.po
@@ -95,7 +95,7 @@ msgstr ""
 
 #: ../Doc/whatsnew/3.1.rst:79
 msgid ":pep:`372` - Ordered Dictionaries"
-msgstr ":pep:`372` - Diccionarios Ordenados"
+msgstr ":pep:`372` - Diccionarios ordenados"
 
 #: ../Doc/whatsnew/3.1.rst:79
 msgid ""
