--- a/whatsnew/3.1.po
+++ b/whatsnew/3.1.po
@@ -116,8 +116,8 @@ msgid ""
 "number with a thousands separator.  That provides a way to humanize a "
 "program's output, improving its professional appearance and readability::"
 msgstr ""
-"La función incorporada :func:`format` y el método :meth:`str.format` usa un "
-"mini-lenguaje que ahora incluye un simple, no consciente de la configuración "
+"La función incorporada :func:`format` y el método :meth:`str.format` usan un "
+"mini-lenguaje que ahora incluye una forma simple, que no tiene en cuenta la configuración "
 "regional, de formatear un número con un separador de miles. Eso proporciona "
 "una manera de humanizar la salida de un programa, mejorando su apariencia "
 "profesional y legibilidad::"
