--- a/whatsnew/3.1.po
+++ b/whatsnew/3.1.po
@@ -308,13 +308,13 @@ msgid ""
 "problem with Python itself)."
 msgstr ""
 "La novedad es cómo se muestra el número.  Anteriormente, Python usaba un "
-"enfoque simple.  El valor de `repr(1.1)`` se calculaba como `format(1.1, "
+"enfoque simple.  El valor de ``repr(1.1)`` se calculaba como ``format(1.1, "
 "'.17g')`` que era evaluado como ``'1.1000000000000001'``. La ventaja de "
-"utilizar 17 dígitos era que se basaba en las garantías IEEE-754 para "
-"asegurar que ``eval(repr(1.1))``se volviera a redondear exactamente a su "
+"utilizar 17 dígitos era que se basaba en las garantías de IEEE-754 para "
+"asegurar que ``eval(repr(1.1))`` se volviera a redondear exactamente a su "
 "valor original. La desventaja es que muchas personas encontraban el "
 "resultado confuso (confundiendo las limitaciones intrínsecas de la "
-"representación de punto flotante binario con un problema con Python en sí)."
+"representación de coma flotante binaria con un problema con Python en sí)."
 
 #: ../Doc/whatsnew/3.1.rst:207
 msgid ""
