--- a/whatsnew/3.1.po
+++ b/whatsnew/3.1.po
@@ -335,8 +335,8 @@ msgid ""
 "``1.1 + 2.2 != 3.3`` even though the representations may suggest otherwise."
 msgstr ""
 "El nuevo algoritmo tiende a emitir representaciones más limpias cuando es "
-"posible, pero esto no cambia los valores subyacentes.  Entonces, todavía es "
-"el caso que ``1.1 + 2.2 != 3.3`` aún cuando las representaciones puedan "
+"posible, pero esto no cambia los valores subyacentes.  Por lo tanto, "
+"todavía se da el caso ``1.1 + 2.2 != 3.3``, aún cuando las representaciones puedan "
 "sugerir lo contrario."
 
 #: ../Doc/whatsnew/3.1.rst:216
