--- a/whatsnew/3.1.po
+++ b/whatsnew/3.1.po
@@ -86,7 +86,7 @@ msgstr ""
 "La biblioteca estándar ahora admite el uso de diccionarios ordenados en "
 "varios módulos. El módulo :mod:`configparser` los usa por defecto. Esto "
 "permite que los archivos de configuración se lean, modifiquen y luego "
-"vuelvan a escribir en su orden original. El método *_asdict()* para :func:"
+"se vuelvan a escribir en su orden original. El método *_asdict()* para :func:"
 "`collections.namedtuple` ahora retorna un diccionario ordenado con los "
 "valores que aparecen en el mismo orden que los índices de tupla subyacentes. "
 "El módulo :mod:`json` se está construyendo con un *object_pairs_hook* para "
