--- a/whatsnew/3.1.po
+++ b/whatsnew/3.1.po
@@ -137,7 +137,7 @@ msgid ""
 "use the existing *n* format specifier which already has some support for "
 "thousands separators."
 msgstr ""
-"Se están discutiendo cómo especificar separadores alternativos como puntos, "
+"Se está discutiendo cómo especificar separadores alternativos como puntos, "
 "espacios, apóstrofes o guiones bajos. Las aplicaciones que reconocen la "
 "configuración regional deben usar el especificador de formato *n* existente, "
 "que ya es compatible con el separadores de miles."
