--- a/whatsnew/3.1.po
+++ b/whatsnew/3.1.po
@@ -64,7 +64,7 @@ msgid ""
 "original insertion position is left unchanged.  Deleting an entry and "
 "reinserting it will move it to the end."
 msgstr ""
-"La API OrderedDict es sustancialmente la misma que los diccionarios "
+"La API de OrderedDict es sustancialmente la misma que la de los diccionarios "
 "normales, pero iterará sobre las claves y los valores en un orden "
 "garantizado, dependiendo de cuándo se insertó una clave por primera vez.  Si "
 "una nueva entrada sobrescribe una entrada existente, la posición de "
