--- a/whatsnew/3.1.po
+++ b/whatsnew/3.1.po
@@ -288,12 +288,12 @@ msgid ""
 "nearest value was and still is used in subsequent floating point "
 "calculations."
 msgstr ""
-"La importancia se ve fácilmente con un número como ``1.1`` que no tiene un "
-"equivalente exacto en el punto flotante binario.  Puesto que no hay un "
+"La importancia se ve fácilmente con un número como ``1.1``, que no tiene un "
+"equivalente exacto en coma flotante binaria.  Puesto que no hay un "
 "equivalente exacto, una expresión como ``float('1.1')`` se evalúa como el "
-"valor representable más cercano que es ``0x1.199999999999ap+0`` en hex o "
+"valor representable más cercano, que es ``0x1.199999999999ap+0`` en hexadecimal o "
 "`1.100000000000000088817841970012523233890533447265625`` en decimal. Ese "
-"valor más cercano fue y todavía se utiliza en los cálculos de coma flotante "
+"valor más cercano fue y todavía es utilizado en los cálculos de coma flotante "
 "posteriores."
 
 #: ../Doc/whatsnew/3.1.rst:198
