--- a/whatsnew/3.1.po
+++ b/whatsnew/3.1.po
@@ -138,7 +138,7 @@ msgid ""
 "thousands separators."
 msgstr ""
 "Se está discutiendo cómo especificar separadores alternativos como puntos, "
-"espacios, apóstrofes o guiones bajos. Las aplicaciones que reconocen la "
+"espacios, apóstrofos o guiones bajos. Las aplicaciones que reconocen la "
 "configuración regional deben usar el especificador de formato *n* existente, "
 "que ya es compatible con el separadores de miles."
 
