--- a/whatsnew/3.1.po
+++ b/whatsnew/3.1.po
@@ -156,7 +156,7 @@ msgstr ""
 
 #: ../Doc/whatsnew/3.1.rst:116
 msgid "Other Language Changes"
-msgstr "Otros cambios de Lenguaje"
+msgstr "Otros cambios del lenguaje"
 
 #: ../Doc/whatsnew/3.1.rst:118
 msgid "Some smaller changes made to the core Python language are:"
