--- a/whatsnew/3.1.po
+++ b/whatsnew/3.1.po
@@ -260,8 +260,8 @@ msgid ""
 "``round(x, n)`` now returns an integer if *x* is an integer. Previously it "
 "returned a float::"
 msgstr ""
-"``round(x, n)`` ahora devuelve un número entero si *x* es un entero. "
-"Anteriormente devolvía un número flotante::"
+"``round(x, n)`` ahora retorna un número entero si *x* es un entero. "
+"Anteriormente retornaba un número flotante::"
 
 #: ../Doc/whatsnew/3.1.rst:183
 msgid "(Contributed by Mark Dickinson; :issue:`4707`.)"
