--- a/whatsnew/3.1.po
+++ b/whatsnew/3.1.po
@@ -172,7 +172,7 @@ msgid ""
 msgstr ""
 "Los directorios y archivos zip que contienen un archivo :file:`__main__.py` "
 "pueden ahora ser ejecutados directamente pasando su nombre al intérprete. El "
-"directorio/archivo zip es automáticamente insertado como la primer entrada "
+"directorio/archivo zip es automáticamente insertado como la primera entrada "
 "en sys.path.  (Sugerencia y parche inicial por Andy Chu; parche revisado por "
 "Phillip J. Eby y Nick Coghlan; :issue:`1739468`.)"
 
