--- a/whatsnew/3.1.po
+++ b/whatsnew/3.1.po
@@ -189,7 +189,7 @@ msgid ""
 "(Contributed by Fredrik Johansson, Victor Stinner, Raymond Hettinger, and "
 "Mark Dickinson; :issue:`3439`.)"
 msgstr ""
-"(Contribución de Fredrik Johansson, Victor Stinner, Raymond Hettinger, y "
+"(Contribución de Fredrik Johansson, Victor Stinner, Raymond Hettinger y "
 "Mark Dickinson; :issue:`3439`.)"
 
 #: ../Doc/whatsnew/3.1.rst:143
