--- a/whatsnew/3.1.po
+++ b/whatsnew/3.1.po
@@ -223,7 +223,7 @@ msgstr ""
 "La función :func:`string.maketrans` está en desuso y se reemplaza por nuevos "
 "métodos estáticos, :meth:`bytes.maketrans` y :meth:`bytearray.maketrans`. "
 "Este cambio resuelve la confusión en torno a los tipos que fueron soportados "
-"por el módulo :mod:`string`. Ahora, :class:`str`, :class:`bytes`, y :class:"
+"por el módulo :mod:`string`. Ahora, :class:`str`, :class:`bytes` y :class:"
 "`bytearray` tienen sus propios métodos **maketrans** y **translate** con "
 "tablas de traducción intermedias del tipo adecuado."
 
