--- a/whatsnew/3.1.po
+++ b/whatsnew/3.1.po
@@ -237,7 +237,7 @@ msgid ""
 "managers in a single statement::"
 msgstr ""
 "La sintaxis de la sentencia :keyword:`with` ahora permite múltiples "
-"administradores de contexto en una sola declaración::"
+"gestores de contexto en una sola declaración::"
 
 #: ../Doc/whatsnew/3.1.rst:171
 msgid ""
