--- a/whatsnew/3.1.po
+++ b/whatsnew/3.1.po
@@ -181,7 +181,7 @@ msgid ""
 "The :func:`int` type gained a ``bit_length`` method that returns the number "
 "of bits necessary to represent its argument in binary::"
 msgstr ""
-"El tipo :func:`int` ganó un método ``bit_length`` que devuelve el número de "
+"El tipo :func:`int` ganó un método ``bit_length`` que retorna el número de "
 "bits necesarios para representar sus argumentos en binario::"
 
 #: ../Doc/whatsnew/3.1.rst:140
