--- a/whatsnew/3.1.po
+++ b/whatsnew/3.1.po
@@ -196,7 +196,7 @@ msgstr ""
 msgid ""
 "The fields in :func:`format` strings can now be automatically numbered::"
 msgstr ""
-"Los campos en :func:`format` cadenas ahora pueden ser automáticamente "
+"Los campos en las cadenas de formato de :func:`format` ahora pueden ser automáticamente "
 "numerados::"
 
 #: ../Doc/whatsnew/3.1.rst:149
