--- a/whatsnew/3.1.po
+++ b/whatsnew/3.1.po
@@ -52,7 +52,7 @@ msgstr ""
 "Los diccionarios de Python normales iteran sobre los pares clave/valor en "
 "orden arbitrario. A través de los años, varios autores han escrito "
 "implementaciones alternativas que recuerdan el orden en el que se insertaron "
-"originalmente las claves. Basado en las experiencias de esas "
+"originalmente las claves. Basándose en las experiencias de esas "
 "implementaciones, una nueva clase :class:`collections.OrderedDict` ha sido "
 "introducida."
 
