Apply suggestions from code review
Co-authored-by: fjsevilla <fjsevilla2.0@gmail.com>

--- a/whatsnew/3.1.po
+++ b/whatsnew/3.1.po
@@ -21,7 +21,7 @@ msgstr ""
 
 #: ../Doc/whatsnew/3.1.rst:3
 msgid "What's New In Python 3.1"
-msgstr "Novedades de Python 3.1"
+msgstr "Qué hay de nuevo en Python 3.1"
 
 #: ../Doc/whatsnew/3.1.rst:0
 msgid "Author"
@@ -365,7 +365,7 @@ msgid ""
 "Added a :class:`collections.Counter` class to support convenient counting of "
 "unique items in a sequence or iterable::"
 msgstr ""
-"Se ha añadido una clase :class:`collections.Counter`para admitir el recuento "
+"Se ha añadido una clase :class:`collections.Counter` para admitir el recuento "
 "conveniente de elementos únicos en una secuencia o una iteración::"
 
 #: ../Doc/whatsnew/3.1.rst:232
@@ -406,7 +406,7 @@ msgid ""
 "surprising::"
 msgstr ""
 "El módulo :mod:`decimal` ahora admite métodos para crear un objeto decimal "
-"de un binario :class:`float`.  La conversión es exacta pero puede ser a "
+"de un :class:`float` binario.  La conversión es exacta pero puede ser a "
 "veces una sorpresa::"
 
 #: ../Doc/whatsnew/3.1.rst:256
@@ -435,8 +435,8 @@ msgid ""
 msgstr ""
 "El módulo :mod:`itertools` desarrolló dos nuevas funciones.  La función :"
 "func:`itertools.combinations_with_replacement` es una de las cuatro para "
-"generar combinatorias que incluyen permutacioes y poductos catesianos.  La "
-"función :func:`itertools.compress` imita su homónimo de APL.  También, la "
+"generar combinatorias que incluyen permutaciones y productos cartesianos.  La "
+"función :func:`itertools.compress` imita su homónimo de APL.  Además, la "
 "función existente :func:`itertools.count` tiene ahora un argumento *step* "
 "opcional y puede aceptar cualquier tipo de secuencia de conteo, incluyendo :"
 "class:`fractions.Fraction` y :class:`decimal.Decimal`::"
@@ -455,7 +455,7 @@ msgid ""
 msgstr ""
 ":func:`collections.namedtuple` ahora admite un argumento de palabra clave "
 "*rename* que permite que los campos de nombre inválidos se conviertan "
-"automáticamente en nombres posicionados de la forma_0, _1, etc.  Esto es de "
+"automáticamente en nombres posicionados de la forma _0, _1, etc.  Esto es de "
 "utilidad cuando los nombres del campo están siendo creados por una fuente "
 "externa como un encabezado CSV, una lista de campos SQL, o la entrada del "
 "usuario::"
@@ -470,7 +470,7 @@ msgid ""
 "accept a flags parameter."
 msgstr ""
 "Las funciones :func:`re.sub`, :func:`re.subn` y :func:`re.split` ahora "
-"admiten parámetros de flags."
+"admiten un parámetro *flags*."
 
 #: ../Doc/whatsnew/3.1.rst:305
 msgid "(Contributed by Gregory Smith.)"
@@ -563,7 +563,7 @@ msgid ""
 "using the :keyword:`with` statement::"
 msgstr ""
 "Además, se han creado pruebas de excepciones para trabajar con "
-"administradores de contexto usando la declaración :keyword:`with`::"
+"gestores de contexto usando la declaración :keyword:`with`::"
 
 #: ../Doc/whatsnew/3.1.rst:360
 msgid ""
@@ -573,7 +573,7 @@ msgid ""
 "`assertTupleEqual`, :func:`assertSequenceEqual`, :func:"
 "`assertRaisesRegexp`, :func:`assertIsNone`, and :func:`assertIsNotNone`."
 msgstr ""
-"Además, se agregaron varios métodos de afirmación nuevos Incluyendo :func:"
+"Además, se agregaron varios métodos de aserción nuevos, incluyendo :func:"
 "`assertSetEqual`, :func:`assertDictEqual`, :func:"
 "`assertDictContainsSubset`, :func:`assertListEqual`, :func:"
 "`assertTupleEqual`, :func:`assertSequenceEqual`, :func:"
