Apply suggestions from code review
Co-authored-by: Cristián Maureira-Fredes <cmaureir@users.noreply.github.com>

--- a/howto/regex.po
+++ b/howto/regex.po
@@ -71,9 +71,9 @@ msgstr ""
 "mod:`re`. Usando este pequeño lenguaje, especificas las reglas para el "
 "conjunto de cadenas de caracteres posibles que deseas hacer coincidir; este "
 "conjunto puede contener frases en inglés, o direcciones de correo "
-"electrónico, o comandos *TeX*, o cualquier cosa que desee. A continuación, "
-"puede hacer preguntas como “¿Coincide esta cadena con el patrón?” O “¿Hay "
-"alguna coincidencia con el patrón en alguna parte de esta cadena?”. También "
+"electrónico, o comandos TeX, o cualquier cosa que desee. A continuación, "
+"puede hacer preguntas como \"¿Coincide esta cadena con el patrón?\" o \"¿Hay "
+"alguna coincidencia con el patrón en alguna parte de esta cadena?\". También "
 "puede utilizar RE para modificar una cadena de caracteres o dividirla de "
 "varias formas."
 
@@ -224,7 +224,7 @@ msgstr ""
 "Puede hacer coincidir los caracteres que no figuran en la clase mediante el "
 "conjunto :dfn:`complementing`. Esto se indica mediante la inclusión de un "
 "``'^'`` como primer carácter de la clase. Por ejemplo, ``[^5]`` coincidirá "
-"con cualquier carácter excepto con ``'5'``.Si el símbolo de intercalación "
+"con cualquier carácter excepto con ``'5'``. Si el símbolo de intercalación "
 "aparece en otra parte de una clase de caracter, no tiene un significado "
 "especial. Por ejemplo: ``[5^] `` coincidirá con un ``'5'`` o un ``'^'``."
 
@@ -379,11 +379,11 @@ msgstr ""
 "El metacarácter final en esta sección es ``.``. Coincide con cualquier cosa "
 "excepto un carácter de nueva línea, y hay un modo alternativo (:const:`re."
 "DOTALL`) donde coincidirá incluso con una nueva línea. ``.`` se usa a menudo "
-"cuando se desea hacer coincidir “cualquier carácter”."
+"cuando se desea hacer coincidir \"cualquier carácter\"."
 
 #: ../Doc/howto/regex.rst:163
 msgid "Repeating Things"
-msgstr "Repitiendo cosas (*Repeating Things*)"
+msgstr "Repitiendo cosas"
 
 #: ../Doc/howto/regex.rst:165
 msgid ""
@@ -418,7 +418,7 @@ msgid ""
 "(1 ``'a'``), ``'caaat'`` (3 ``'a'`` characters), and so forth."
 msgstr ""
 "Por ejemplo, ``ca*t`` coincidirá con ``'ct'`` (0 ``'a'`` caracteres), "
-"``'cat'`` (1 ``'a'``), ``'caaat'`` (3 ``'a'`` caracteres), etcétera."
+"``'cat'`` (1 ``'a'``), ``'caaat'`` (3 ``'a'`` caracteres), etc."
 
 #: ../Doc/howto/regex.rst:178
 msgid ""
@@ -497,7 +497,7 @@ msgid ""
 "The engine tries to match ``b``, but the current position is at the end of "
 "the string, so it fails."
 msgstr ""
-"El motor intenta hacer coincidir ``b``,pero la posición actual está al final "
+"El motor intenta hacer coincidir ``b``, pero la posición actual está al final "
 "de la cadena de caracteres, por lo que falla."
 
 #: ../Doc/howto/regex.rst:202
@@ -576,7 +576,7 @@ msgid ""
 msgstr ""
 "Otro metacarácter que se repite es ``+``, que coincide una o más veces. "
 "Preste especial atención a la diferencia entre ``*`` and ``+``; coincide con "
-"*zero* o más veces, por lo que cualquier cosa que se repita puede no estar "
+"*cero* o más veces, por lo que cualquier cosa que se repita puede no estar "
 "presente en absoluto, mientras que ``+`` requiere al menos *one* aparición. "
 "Para usar un ejemplo similar, ``'cat'`` (1 ``'a'``), ``'caaat'`` (3 ``'a'``"
 "\\ s), pero no coincidirá con ``'ct'``."
@@ -633,7 +633,7 @@ msgstr ""
 
 #: ../Doc/howto/regex.rst:256
 msgid "Using Regular Expressions"
-msgstr "Usando Expresiones regulares"
+msgstr "Usando Expresiones Regulares"
 
 #: ../Doc/howto/regex.rst:258
 msgid ""
@@ -700,9 +700,8 @@ msgstr ""
 "pero tiene una desventaja que es el tema de la siguiente sección."
 
 #: ../Doc/howto/regex.rst:296
-#, fuzzy
 msgid "The Backslash Plague"
-msgstr "La maldita barra invertida (*The Backslash Plague*)"
+msgstr "La plaga de la barra invertida (*The Backslash Plague*)"
 
 #: ../Doc/howto/regex.rst:298
 msgid ""
@@ -729,11 +728,11 @@ msgid ""
 "*again*."
 msgstr ""
 "Supongamos que desea escribir una RE que coincida con la cadena de "
-"caracteres ``\\section``, que podría encontrarse en un archivo *LaTeX*. Para "
+"caracteres ``\\section``, que podría encontrarse en un archivo LaTeX. Para "
 "averiguar qué escribir en el código del programa, comience con la cadena "
 "deseada para que coincida. A continuación, debe escapar de las barras "
 "invertidas y otros metacarácteres precediéndolos con una barra invertida, lo "
-"que da como resultado la cadena `` \\\\ sección ''. La cadena resultante que "
+"que da como resultado la cadena ``\\\\section``. La cadena resultante que "
 "debe pasarse a :func:`re.compile` debe ser ``\\\\section``. Sin embargo, "
 "para expresar esto como una cadena literal de Python, ambas barras "
 "invertidas deben escaparse *nuevamente*."
@@ -764,12 +763,12 @@ msgstr "Barra invertida de escape para :func:`re.compile`"
 
 #: ../Doc/howto/regex.rst:318 ../Doc/howto/regex.rst:345
 msgid "``\"\\\\\\\\section\"``"
-msgstr "``”\\\\\\\\section”``"
+msgstr "``\"\\\\\\\\section\"``"
 
 #: ../Doc/howto/regex.rst:318
 msgid "Escaped backslashes for a string literal"
 msgstr ""
-"Barra diagonal inversa de escape para un literal de cadena de caracteres"
+"Barra invertida de escape para un literal de cadena de caracteres"
 
 #: ../Doc/howto/regex.rst:321
 msgid ""
@@ -820,34 +819,33 @@ msgstr ""
 
 #: ../Doc/howto/regex.rst:341
 msgid "Regular String"
-msgstr "Cadena de caracteres regular"
+msgstr "Cadena de caracteres regulares"
 
 #: ../Doc/howto/regex.rst:341
 msgid "Raw string"
-msgstr "Cadena de caracteres cruda (*Raw string*)"
+msgstr "Cadena de caracteres crudas (*Raw string*)"
 
 #: ../Doc/howto/regex.rst:343
 msgid "``\"ab*\"``"
-msgstr "``”ab*”``"
+msgstr "``\"ab*\"``"
 
 #: ../Doc/howto/regex.rst:343
 msgid "``r\"ab*\"``"
-msgstr "``r”ab*”``"
+msgstr "``r\"ab*\"``"
 
 #: ../Doc/howto/regex.rst:345
 msgid "``r\"\\\\section\"``"
-msgstr "``r”\\\\section”``"
+msgstr "``r\"\\\\section\"``"
 
 #: ../Doc/howto/regex.rst:347
 msgid "``\"\\\\w+\\\\s+\\\\1\"``"
-msgstr "``”\\\\w+\\\\s+\\\\1”``"
+msgstr "``\"\\\\w+\\\\s+\\\\1\"``"
 
 #: ../Doc/howto/regex.rst:347
 msgid "``r\"\\w+\\s+\\1\"``"
-msgstr "``r”\\w+\\s+\\1”``"
+msgstr "``r\"\\w+\\s+\\1\"``"
 
 #: ../Doc/howto/regex.rst:352
-#, fuzzy
 msgid "Performing Matches"
 msgstr "Realizando coincidencias"
 
@@ -1019,7 +1017,7 @@ msgstr "``span()``"
 #: ../Doc/howto/regex.rst:426
 msgid "Return a tuple containing the (start, end) positions  of the match"
 msgstr ""
-"Retorna una dupla que contiene (inicio, final) las posiciones de coincidencia"
+"Retorna una tupla que contiene (inicio, final) las posiciones de coincidencia"
 
 #: ../Doc/howto/regex.rst:430
 msgid "Trying these methods will soon clarify their meaning::"
@@ -1075,7 +1073,7 @@ msgid ""
 msgstr ""
 "El prefijo ``r``, que convierte al literal en una cadena de caracteres "
 "literal sin formato, es necesario en este ejemplo porque las secuencias de "
-"escape en un cadena de caracteres literal “cocinado” normal que no son "
+"escape en un cadena de caracteres literal \"cocinado\" normal que no son "
 "reconocidas por Python, a diferencia de las expresiones regulares, ahora dan "
 "como resultado :exc:`DeprecationWarning` y eventualmente se convertirá en :"
 "exc:`SyntaxError`. Ver :ref:`the-backslash-plague`."
@@ -1114,7 +1112,6 @@ msgstr ""
 "objects>`. ::"
 
 #: ../Doc/howto/regex.rst:510
-#, fuzzy
 msgid ""
 "Under the hood, these functions simply create a pattern object for you and "
 "call the appropriate method on it.  They also store the compiled object in a "
@@ -1160,7 +1157,7 @@ msgstr ""
 "una forma corta de una letra como :const:`I`. (Si está familiarizado con los "
 "modificadores de patrones de Perl, las formas de una letra usan las mismas "
 "letras; la forma corta de :const:`re.VERBOSE` es :const:`re.X`, por ejemplo)."
-"Se pueden especificar varios indicadores colocándolos en *OR-ing* bit a bit; "
+"Se pueden especificar varios indicadores uniendolos con *OR* bit a bit; "
 "``re.I | re.M`` establece los flags :const:`I` and :const:`M`, por ejemplo."
 
 #: ../Doc/howto/regex.rst:533
@@ -1244,7 +1241,7 @@ msgid ""
 "z]`` or ``[A-Z]`` are used in combination with the :const:`IGNORECASE` flag, "
 "they will match the 52 ASCII letters and 4 additional non-ASCII letters: "
 "'İ' (U+0130, Latin capital letter I with dot above), 'ı' (U+0131, Latin "
-"small letter dotless i), 'ſ' (U+017F, Latin small letter long s) and 'K' (U"
+"small letter dotless i), 'ſ' (U+017F, Latin small letter long s) and 'K' (U"
 "+212A, Kelvin sign).  ``Spam`` will match ``'Spam'``, ``'spam'``, "
 "``'spAM'``, or ``'ſpam'`` (the latter is matched only in Unicode mode). This "
 "lowercasing doesn't take the current locale into account; it will if you "
@@ -1260,7 +1257,7 @@ msgstr ""
 "const:ʻIGNORECASE`, coincidirán con las 52 letras ASCII y 4 letras "
 "adicionales no ASCII 'İ' (U+0130, letra mayúscula latina I con un punto "
 "arriba), 'ı' (U+0131, letra minúscula latina sin punto i),'ſ' (U+017F, letra "
-"minúscula latina larga s) y 'K' (U+212A, signo de *Kelvin*). ``Spam`` "
+"minúscula latina larga s) y 'K' (U+212A, signo de Kelvin). ``Spam`` "
 "coincidirá ``'Spam'``, ``'spam'``, ``'spAM'``, o ``'ſpam'`` (este último "
 "solo coincide en modo Unicode). Estas minúsculas no tiene en cuenta la "
 "configuración regional actual; lo hará si también establece la flag :const:"
@@ -1406,7 +1403,7 @@ msgstr ""
 
 #: ../Doc/howto/regex.rst:672
 msgid "More Pattern Power"
-msgstr "Más poder de coincidencia"
+msgstr "Más poder de patrones"
 
 #: ../Doc/howto/regex.rst:674
 msgid ""
@@ -1463,7 +1460,7 @@ msgid ""
 "``'Crow'`` or ``'Servo'``, not ``'Cro'``, a ``'w'`` or an ``'S'``, and "
 "``'ervo'``."
 msgstr ""
-"Alternancia, o el operador “or”. Si *A* y *B* son expresiones regulares, ``A|"
+"Alternancia, o el operador \"or\". Si *A* y *B* son expresiones regulares, ``A|"
 "B`` coincidirá con cualquier cadena de caracteres que coincida con *A* o "
 "*B*. ``|`` tiene una precedencia muy baja para que funcione razonablemente "
 "cuando está alternando cadenas de varios caracteres. ``Crow|Servo`` "
@@ -1513,7 +1510,7 @@ msgstr "``$``"
 #: ../Doc/howto/regex.rst:721
 msgid ""
 "Matches at the end of a line, which is defined as either the end of the "
-"string, or any location followed by a newline character. ::"
+"string, or any location followed by a newline character.     ::"
 msgstr ""
 "Coincide con el final de una línea, que se define como el final de la cadena "
 "o cualquier ubicación seguida de un carácter de nueva línea. ::"
@@ -1540,8 +1537,8 @@ msgid ""
 msgstr ""
 "Coincide solo al comienzo de la cadena de caracteres. Cuando no está en el "
 "modo :const:`MULTILINE`,``\\A`` y ``^`` son efectivamente lo mismo. En el "
-"modo :const:`MULTILINE`, son diferentes: ``\\ A`` todavía coincide solo al "
-"principio de la cadena, pero``^``puede coincidir en cualquier ubicación "
+"modo :const:`MULTILINE`, son diferentes: ``\\A`` todavía coincide solo al "
+"principio de la cadena, pero ``^`` puede coincidir en cualquier ubicación "
 "dentro de la cadena de caracteres que sigue a un carácter de nueva línea."
 
 #: ../Doc/howto/regex.rst:741
@@ -1577,7 +1574,6 @@ msgstr ""
 "completa; no coincidirá cuando esté contenido dentro de otra palabra. ::"
 
 #: ../Doc/howto/regex.rst:760
-#, fuzzy
 msgid ""
 "There are two subtleties you should remember when using this special "
 "sequence. First, this is the worst collision between Python's string "
@@ -1961,14 +1957,14 @@ msgid ""
 "is tried right where the assertion started."
 msgstr ""
 "Aserción de anticipación positiva. Esto tiene éxito si la expresión regular "
-"contenida, representada aquí por ``…``, coincide con éxito en la ubicación "
+"contenida, representada aquí por ``...``, coincide con éxito en la ubicación "
 "actual y falla en caso contrario. Pero, una vez que se ha probado la "
 "expresión contenida, el motor de comparación no avanza en absoluto; el resto "
 "del patrón se intenta justo donde comenzó la aserción."
 
 #: ../Doc/howto/regex.rst:994
 msgid "``(?!...)``"
-msgstr "``(?!…)``"
+msgstr "``(?!...)``"
 
 #: ../Doc/howto/regex.rst:992
 msgid ""
@@ -1977,7 +1973,7 @@ msgid ""
 "current position in the string."
 msgstr ""
 "Aserción de anticipación negativa. Esto es lo opuesto a la flag positiva; "
-"tiene éxito si la expresión contenida *no* (*doesn't*) coincide con la "
+"tiene éxito si la expresión contenida *no* coincide con la "
 "posición actual en la cadena."
 
 #: ../Doc/howto/regex.rst:996
@@ -2152,8 +2148,8 @@ msgid ""
 "Find all substrings where the RE matches, and replace them with a different "
 "string"
 msgstr ""
-"Encuentre todas las subcadenas de caracteres donde coincida la RE y "
-"reemplácelas con una cadena de caracteres diferente"
+"Encuentra todas las subcadenas de caracteres donde coincida la RE y "
+"las reemplaza con una cadena de caracteres diferente"
 
 #: ../Doc/howto/regex.rst:1072
 msgid "``subn()``"
