--- a/howto/regex.po
+++ b/howto/regex.po
@@ -497,8 +497,8 @@ msgid ""
 "The engine tries to match ``b``, but the current position is at the end of "
 "the string, so it fails."
 msgstr ""
-"El motor intenta hacer coincidir ``b``, pero la posición actual está al final "
-"de la cadena de caracteres, por lo que falla."
+"El motor intenta hacer coincidir ``b``, pero la posición actual está al "
+"final de la cadena de caracteres, por lo que falla."
 
 #: ../Doc/howto/regex.rst:202
 msgid "4"
@@ -767,8 +767,7 @@ msgstr "``\"\\\\\\\\section\"``"
 
 #: ../Doc/howto/regex.rst:318
 msgid "Escaped backslashes for a string literal"
-msgstr ""
-"Barra invertida de escape para un literal de cadena de caracteres"
+msgstr "Barra invertida de escape para un literal de cadena de caracteres"
 
 #: ../Doc/howto/regex.rst:321
 msgid ""
@@ -1157,8 +1156,8 @@ msgstr ""
 "una forma corta de una letra como :const:`I`. (Si está familiarizado con los "
 "modificadores de patrones de Perl, las formas de una letra usan las mismas "
 "letras; la forma corta de :const:`re.VERBOSE` es :const:`re.X`, por ejemplo)."
-"Se pueden especificar varios indicadores uniendolos con *OR* bit a bit; "
-"``re.I | re.M`` establece los flags :const:`I` and :const:`M`, por ejemplo."
+"Se pueden especificar varios indicadores uniéndolos con *OR* bit a bit; ``re."
+"I | re.M`` establece los flags :const:`I` and :const:`M`, por ejemplo."
 
 #: ../Doc/howto/regex.rst:533
 msgid ""
@@ -1460,8 +1459,8 @@ msgid ""
 "``'Crow'`` or ``'Servo'``, not ``'Cro'``, a ``'w'`` or an ``'S'``, and "
 "``'ervo'``."
 msgstr ""
-"Alternancia, o el operador \"or\". Si *A* y *B* son expresiones regulares, ``A|"
-"B`` coincidirá con cualquier cadena de caracteres que coincida con *A* o "
+"Alternancia, o el operador \"or\". Si *A* y *B* son expresiones regulares, "
+"``A|B`` coincidirá con cualquier cadena de caracteres que coincida con *A* o "
 "*B*. ``|`` tiene una precedencia muy baja para que funcione razonablemente "
 "cuando está alternando cadenas de varios caracteres. ``Crow|Servo`` "
 "coincidirá con `'Crow'`` o ``'Servo'``, no ``'Cro'``, un ``'w'`` o un "
@@ -1973,8 +1972,8 @@ msgid ""
 "current position in the string."
 msgstr ""
 "Aserción de anticipación negativa. Esto es lo opuesto a la flag positiva; "
-"tiene éxito si la expresión contenida *no* coincide con la "
-"posición actual en la cadena."
+"tiene éxito si la expresión contenida *no* coincide con la posición actual "
+"en la cadena."
 
 #: ../Doc/howto/regex.rst:996
 msgid ""
@@ -2148,8 +2147,8 @@ msgid ""
 "Find all substrings where the RE matches, and replace them with a different "
 "string"
 msgstr ""
-"Encuentra todas las subcadenas de caracteres donde coincida la RE y "
-"las reemplaza con una cadena de caracteres diferente"
+"Encuentra todas las subcadenas de caracteres donde coincida la RE y las "
+"reemplaza con una cadena de caracteres diferente"
 
 #: ../Doc/howto/regex.rst:1072
 msgid "``subn()``"
